--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Methodology'
 - !lcsh 'Science -- Methodology'
 - !lcc 'B'
+- GITenberg
 title: 'A Discourse of a Method for the Well Guiding of Reason
 
   and the Discovery of Truth in the Sciences'
